[gd_scene load_steps=7 format=3 uid="uid://b88bebu15bgkl"]

[ext_resource type="Script" uid="uid://bd6ihnsx7cfyq" path="res://Scripts/gameover_menu.gd" id="1_360b7"]
[ext_resource type="Script" uid="uid://dqlvi2ucgwa5l" path="res://Scripts/score_label.gd" id="2_qw18a"]

[sub_resource type="Gradient" id="Gradient_28flt"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.35686275, 0, 0.03137255, 0.2509804)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_28flt"]
gradient = SubResource("Gradient_28flt")

[sub_resource type="LabelSettings" id="LabelSettings_48xlc"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_jmoai"]
font_size = 30

[node name="GameoverMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_360b7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_28flt")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -286.0
offset_top = 118.0
offset_right = 287.0
offset_bottom = 206.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_48xlc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 44.0
offset_right = 150.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "MAIN MENU
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT
"

[node name="Score_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 529.0
offset_top = 259.0
offset_right = 609.0
offset_bottom = 301.0
text = "Score"
label_settings = SubResource("LabelSettings_jmoai")
script = ExtResource("2_qw18a")

[connection signal="button_down" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_button_down"]
[connection signal="button_down" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
